--- a/src/App.css
+++ b/src/App.css
@@ -54,4 +54,7 @@
     margin-left: 10px;
     margin-right: 10px;
     cursor: pointer;
+    padding: 0;
+    border: none;
+    background: none;
 }
